# ergo-agent-sdk

./: .gitignore  .readthedocs.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  _cleanup_sdk.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  scrape_routes.py  sitemap.xml  test_checksum.py  test_tokenjay.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
api-reference/: index.html
architecture/: index.html
docs/: api-reference.md  architecture.md  getting-started.md  index.md  privacy-pool-guide.md  privacy-security-guide.md  requirements.txt  tutorial.md
docs/whitepapers/: cash-v3-whitepaper.md
examples/: 01_check_balance.py  02_read_oracle_price.py  03_swap_quote.py  04_openai_agent.py  05_address_info.py  06_portfolio_tracker.py  07_mempool_monitor.py  08_safety_demo.py  09_dex_scanner.py  10_cli_tool_runner.py  11_sigmausd_state.py  12_rosen_bridge.py  14_mint_token.py  15_ergo_cash_v3_ring_scanner.py  15_privacy_pool_scanner.py  16_cash_v3_autonomous_agent.py  16_privacy_pool_agent.py  check_bank.py  check_ergonames.py  check_rosen.py  test_serialization.py
getting-started/: index.html
hooks/: pre-commit
privacy-pool-guide/: index.html
privacy-security-guide/: index.html
search/: search_index.json
src/ergo_agent/: __init__.py
tests/: live_check.py  verify_privacy_tools.py
tests/integration/: __init__.py  test_address.py  test_defi.py  test_node.py  test_privacy_advanced_security.py  test_privacy_adversarial.py  test_privacy_lifecycle.py  test_rosen.py  test_sigmausd.py
tests/unit/: test_adversarial_dhtuple.py  test_api_server.py  test_audit_fixes.py  test_bootstrapping.py  test_builder_extensions.py  test_contract_crit_adversarial.py  test_dhtuple.py  test_formal_invariants.py  test_master_pool.py  test_models.py  test_multi_asset.py  test_pedersen.py  test_privacy_client.py  test_privacy_edge_cases.py  test_privacy_pool_client.py  test_privacy_vlq.py  test_range_proof.py  test_rosen_bridge.py  test_safety.py  test_treasury.py  (+3 more)
tmp_ergonames/: ergonames-0.4.1-py3-none-any.whl
tutorial/: index.html
(+35 files in other folders)
