[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ergo-agent-sdk"
version = "0.5.0"
description = "Open-source Python SDK for AI agents to interact with the Ergo blockchain"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ergo", "blockchain", "ai", "agent", "llm", "defi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "typing_extensions>=4.12.2",
    "mnemonic>=0.21",
    "ergo-lib-python>=0.28.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.2.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.30.0",
]
all = [
    "langchain-core>=0.2.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipykernel>=6.0.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/ergoplatform/ergo-agent-sdk"
Documentation = "https://ergo-agent-sdk.readthedocs.io"
Repository = "https://github.com/ergoplatform/ergo-agent-sdk"
Issues = "https://github.com/ergoplatform/ergo-agent-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ergo_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live network tests (require API access)",
]
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
